@@ -1,3 +1,7 @@
+2015-01-02  Stipe Tolj  <stolj at kannel.org>
+    * gw/smsc/http/generic.c: fix segfault when starting without specific
+      configuration directives for this type.
+      
 2014-12-19  Stipe Tolj  <stolj at kannel.org>
     * gw/sms.c: add a TODO note in function extract_msgdata_part_by_coding()
       that yields a GSM centric limitation in regards of character encoding
